--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -1,7 +1,8 @@
 <mvc:View
 	controllerName="sap.ui.demo.wt.controller.Detail"
 	xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc">
+	xmlns:mvc="sap.ui.core.mvc"
+	xmlns:wt="sap.ui.demo.wt.control">
 	<Page
 		title="{i18n>detailPageTitle}"
 		showNavButton="true"
@@ -12,5 +13,6 @@
 		<Button 
 			text="{i18n>goToGoogle}"
 			press="goToGoogle" />
+		<wt:ProductRating class="sapUiSmallMarginBeginEnd" change="onRatingChange"/>
 	</Page>
 </mvc:View>
