--- a/webapp/view/HelloPanel.view.xml
+++ b/webapp/view/HelloPanel.view.xml
@@ -5,12 +5,14 @@
    <Panel
       headerText="{i18n>helloPanelTitle}"
       class="sapUiResponsiveMargin"
-      width="auto" >
+      width="auto" 
+      expandable="{device>/system/phone}"
+	  expanded="{= !${device>/system/phone} }">
       <content>
       	 <Button
         	text="{i18n>openDialogButtonText}"
         	press="onOpenDialog"
-        	class="sapUiSmallMarginEnd"
+        	class="sapUiSmallMarginEnd sapUiVisibleOnlyOnDesktop"
         	icon="sap-icon://world" 
         	id="tutu"/>
          <Button
